k8s/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: spotify-stats
  labels:
    app: spotify-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-stats
      tier: mysql
  template:
    metadata:
      labels:
        app: spotify-stats
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
