k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotify-app-service
  namespace: spotify-stats
spec:
  type: NodePort
  selector:
    app: spotify-stats
    tier: app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
